assets/css/site.css
@font-face {
  font-family: 'Inter';
  font-style:  italic;
  font-weight: 420;
  font-display: swap;
  src: url("/splog/assets/fonts/Inter-Italic.woff2?v=3.12") format("woff2")
}
@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 420;
  font-display: swap;
  src: url("/splog/assets/fonts/Inter-Regular.woff2?v=3.12") format("woff2")

}
@font-face {
  font-family: 'Inter';
  font-style:  normal;
  font-weight: 700;
  font-display: swap;
  src: url("/splog/assets/fonts/Inter-Bold.woff2?v=3.12") format("woff2")

}
@font-face {
  font-family: 'Inter';
  font-style:  italic;
  font-weight: 700;
  font-display: swap;
  src: url("/splog/assets/fonts/Inter-BoldItalic.woff2?v=3.12") format("woff2")
}

@font-face {
  font-family: "mono";
  font-weight: 420;
  src: url(/splog/assets/fonts/intelone-mono-font-family-regular.otf);
}

:root {
  --bg: #363636;
  --bg-darker: #333333;
  --bg-darkest: #222222;
  --text: #9C9C9D;
  --header: #79808A;
  --alt1: #627A78;
  --alt2: #79808A;
  --alt3: #957A65;
  --border: #4B4B4B;
  --header-font: "Inter";
  --mono-font: "mono";
}

body {
  margin: 0;
  font-family: "Inter", "Arial";
  font-size: 1.20rem;
  line-height: 150%;
  color: var(--text);
  font-weight: 400;
  background-color: var(--bg);
}

main {
  min-height: 420px;
  padding: 0 15px;
}

#hamburger {
  margin-left: 15px;
  margin-top: 15px;
  font-size: 250%;
  line-height: 50px;
  border: none;
}

nav #links {
  position: fixed;
  display: none;
  font-weight: 500;
  background-color: var(--bg-darker);
  z-index: 1;
}

#links a, #links form {
  margin-left: 15px;
  margin-top: 10px;
  font-size: 125%;
  border: none;
  display: block;
}

.container {
  margin: auto;
  max-width: 960px;
}

.post {
  padding-bottom: 120px;
}

[alt="thumb"] {
  float: right;
  margin: 15px;
  width: 150px;
  height: 150px;
  border: 1px solid var(--border);
  text-align: center;
  background-color: var(--text);
  padding: 5px;
  border-radius: 15px
}

.small {
  margin: 15px;
  font-size: 80%;
  text-align: center;
  font-style: italic;
  color: var(--alt1);
}

.tags {
  margin-top: 15px;
  font-style: italic;
}

#search {
  float: right;
  margin-top: 5px;
  border-radius: 5px;
  padding: 5px 5px;
  font-size: 90%;
  width: 180px;
  color: #CECCCA;
  background-color: var(--bg-darkest);
  border: 1px solid var(--bg-darkest);
}

#more-posts {
  margin-bottom: 15px;
  font-size: 90%;
  text-align: center;
  color: var(--bg-darker);
  background-color: var(--alt2);
  padding: 15px;
  border: none;
  border-radius: 15px
}

audio {
  width: 100%;
}

b, strong {
  font-weight: 700;
}

code {
  background-color: #414141;
  color: var(--alt3);
  font-family: var(--mono-font);
}

a {
  color: var(--header);
  text-decoration: none;
  border-bottom: 1.2px solid var(--border);
}

a:hover,
.post-title:hover, .active {
  color: var(--alt3);
}

table {
  padding-bottom: 15px;
  width: 100%;
  border-collapse: collapse;
}

table, th, td {
  border: 1px solid var(--border);
}

th {
  background-color: var(--bg-darker);
}

th, td {
  padding: 2.5px 5px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  font-weight: 700;
  color: #8D8678;
  line-height: 150%;
  font-family: var(--header-font);
}

h2 {
  font-size: 250%;
  text-align: center;
  color: var(--header);
  margin-bottom: 1.2rem;
  text-transform: uppercase;
}

h3, .names {
  font-size: 200%;
  color: var(--header);
  margin-bottom: 15px;
  margin-top: 60px;
  text-transform: uppercase;
  font-family: var(--header-font);
}

h4 {
  margin-top: 30px;
  font-size: 150%;
  color: var(--header);
}

h5 {
  font-size: 120%;
}

ul {
  text-align: left;
  margin-left: 15px;
  padding-left: 0px;
}

ol {
  text-align: left;
  margin-left: 20px;
  padding-left: 5px;
}

ul li {
  list-style-type: '\2726';
  padding-left: 10px;
}

blockquote {
  padding-left: 15px;
  border-left: 5px solid var(--alt2);
  display: block;
  margin-inline-start: 5px;
}

